Fixed login text overlap with image

--- a/src/style.css
+++ b/src/style.css
@@ -36,8 +36,6 @@ body {
 #loginText {
   line-height: 1;
 	text-align: left;
-	position: fixed;
-	top: 0;
 }
 
 button {
